--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </li>
             <li>
               <img
-                src="assets/icons/tech icon/javascript.svg"
+                src="assets/icons/tech icon/javaScript.svg"
                 alt="javascript icon"
               />
               Javascript
